1.3.5 - Fixed white space in preview panel making it more readable

--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,7 @@ html,
 
   /* Table styles */
   & table {
-    width: 95%;
+    width: 100%;
     margin: 10px 0;
     border-collapse: collapse;
   }
